x and y readouts and fix button misalign

--- a/css/style.css
+++ b/css/style.css
@@ -125,8 +125,8 @@ button:hover:not(:disabled) {
 .game .fillpanel {
     width: 40rem;
     min-width: 10rem;
-    max-height: 600px;
-    height: 600px;
+    max-height: 780px;
+    height: 780px;
     min-height: 300px;
 }
 
@@ -235,6 +235,7 @@ button:hover:not(:disabled) {
 .property .property-title b {
     width: 30%;
     height: 100%;
+    flex-shrink: 0;
 }
 
 .property .property-title select{
@@ -249,6 +250,11 @@ button:hover:not(:disabled) {
 
 .property .warning {
     color: red;
+}
+
+.property .deletePropButton {
+    margin-left: 0.2rem;
+    margin-top: 0em !important; 
 }
 
 .debug {
